--- a/StreetSmartAPI/StreetSmart.API/WPF/StreetSmart.WPF.x64.csproj
+++ b/StreetSmartAPI/StreetSmart.API/WPF/StreetSmart.WPF.x64.csproj
@@ -48,14 +48,14 @@
     <WarningLevel>3</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
-    <OutputPath>..\..\DemoAPI\Demo.WinForms\x64\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
+    <OutputPath>..\..\..\DemoAPI\Demo.WPF\x64\</OutputPath>
+    <DefineConstants>TRACE;WPF</DefineConstants>
     <Optimize>true</Optimize>
     <DebugType>none</DebugType>
     <PlatformTarget>x64</PlatformTarget>
     <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
-    <DocumentationFile>..\..\DemoAPI\Demo.WinForms\x64\StreetSmart.Wpf.xml</DocumentationFile>
+    <DocumentationFile>..\..\..\DemoAPI\Demo.WPF\x64\StreetSmart.Wpf.xml</DocumentationFile>
     <DebugSymbols>false</DebugSymbols>
   </PropertyGroup>
   <PropertyGroup>
