--- a/StreetSmartAPI/StreetSmart.API/WPF/StreetSmart.WPF.x86.csproj
+++ b/StreetSmartAPI/StreetSmart.API/WPF/StreetSmart.WPF.x86.csproj
@@ -67,7 +67,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x86'">
     <OutputPath>..\..\DemoAPI\Demo.WinForms\x86\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
+    <DefineConstants>TRACE;WPF</DefineConstants>
     <Optimize>true</Optimize>
     <DebugType>none</DebugType>
     <PlatformTarget>x86</PlatformTarget>
