- Exception message if you try to call a viewer which no longer exists - Destroy function is now awaited

--- a/StreetSmartAPI/StreetSmart.API/WPF/StreetSmart.WPF.x64.csproj
+++ b/StreetSmartAPI/StreetSmart.API/WPF/StreetSmart.WPF.x64.csproj
@@ -333,6 +333,9 @@
     <Compile Include="..\Common\Exceptions\StreetSmartLoginFailedException.cs">
       <Link>Exceptions\StreetSmartLoginFailedException.cs</Link>
     </Compile>
+    <Compile Include="..\Common\Exceptions\StreetSmartViewerDoesNotExistException.cs">
+      <Link>Exceptions\StreetSmartViewerDoesNotExistException.cs</Link>
+    </Compile>
     <Compile Include="..\Common\Extensions\BoolExtensions.cs">
       <Link>Extensions\BoolExtensions.cs</Link>
     </Compile>
