--- a/StreetSmartAPI/StreetSmart.API/WPF/StreetSmart.WPF.x86.csproj
+++ b/StreetSmartAPI/StreetSmart.API/WPF/StreetSmart.WPF.x86.csproj
@@ -240,6 +240,9 @@
     <Compile Include="..\Common\Data\GeoJson\MeasureDetails.cs">
       <Link>Data\GeoJson\MeasureDetails.cs</Link>
     </Compile>
+    <Compile Include="..\Common\Data\GeoJson\MeasurementProperties.cs">
+      <Link>Data\GeoJson\MeasurementProperties.cs</Link>
+    </Compile>
     <Compile Include="..\Common\Data\GeoJson\ObservationLines.cs">
       <Link>Data\GeoJson\ObservationLines.cs</Link>
     </Compile>
@@ -405,6 +408,9 @@
     <Compile Include="..\Common\Factories\DomElementFactory.cs">
       <Link>Factories\DomElementFactory.cs</Link>
     </Compile>
+    <Compile Include="..\Common\Factories\GeoJsonFactory.cs">
+      <Link>Factories\GeoJsonFactory.cs</Link>
+    </Compile>
     <Compile Include="..\Common\Factories\JsonFactory.cs">
       <Link>Factories\JsonFactory.cs</Link>
     </Compile>
@@ -546,6 +552,9 @@
     <Compile Include="..\Common\Interfaces\GeoJson\FeatureType.cs">
       <Link>Interfaces\GeoJson\FeatureType.cs</Link>
     </Compile>
+    <Compile Include="..\Common\Interfaces\GeoJson\GeometryType.cs">
+      <Link>Interfaces\GeoJson\GeometryType.cs</Link>
+    </Compile>
     <Compile Include="..\Common\Interfaces\GeoJson\ICrs.cs">
       <Link>Interfaces\GeoJson\ICrs.cs</Link>
     </Compile>
@@ -590,6 +599,9 @@
     </Compile>
     <Compile Include="..\Common\Interfaces\GeoJson\IMeasureDetails.cs">
       <Link>Interfaces\GeoJson\IMeasureDetails.cs</Link>
+    </Compile>
+    <Compile Include="..\Common\Interfaces\GeoJson\IMeasurementProperties.cs">
+      <Link>Interfaces\GeoJson\IMeasurementProperties.cs</Link>
     </Compile>
     <Compile Include="..\Common\Interfaces\GeoJson\IObservationLines.cs">
       <Link>Interfaces\GeoJson\IObservationLines.cs</Link>
