--- a/StreetSmartAPI/StreetSmart.WPF.Example/StreetSmart.WPF.Example.x64.csproj
+++ b/StreetSmartAPI/StreetSmart.WPF.Example/StreetSmart.WPF.Example.x64.csproj
@@ -48,6 +48,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="DelegateCommand.cs" />
     <Compile Include="MainWindowModel.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
