--- a/StreetSmartAPI/StreetSmart.API/WPF/StreetSmart.WPF.x64.csproj
+++ b/StreetSmartAPI/StreetSmart.API/WPF/StreetSmart.WPF.x64.csproj
@@ -75,6 +75,9 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\Common\API\APIBase.cs">
+      <Link>API\APIBase.cs</Link>
+    </Compile>
     <Compile Include="..\Common\API\Events\ApiEvent.cs">
       <Link>API\Events\ApiEvent.cs</Link>
     </Compile>
