--- a/DemoAPI/Demo.WinForms/Demo.WinForms.x64.csproj
+++ b/DemoAPI/Demo.WinForms/Demo.WinForms.x64.csproj
@@ -51,8 +51,8 @@
     <SignAssembly>false</SignAssembly>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="StreetSmart.WinForms.x64">
-      <HintPath>..\..\DemoAPI\Demo.WinForms\x64\StreetSmart.WinForms.x64.dll</HintPath>
+    <Reference Include="StreetSmart.WinForms">
+      <HintPath>x64\StreetSmart.WinForms.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
