--- a/DemoAPI/Demo.WinForms/Demo.WinForms.x86.csproj
+++ b/DemoAPI/Demo.WinForms/Demo.WinForms.x86.csproj
@@ -53,8 +53,8 @@
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="StreetSmart.WinForms.x86">
-      <HintPath>x86\StreetSmart.WinForms.x86.dll</HintPath>
+    <Reference Include="StreetSmart.WinForms">
+      <HintPath>x86\StreetSmart.WinForms.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
