STREET-2045: - implemented ugly viewerUpdate event - improved the demo help form

--- a/StreetSmartAPI/StreetSmart.API/WPF/StreetSmart.WPF.x64.csproj
+++ b/StreetSmartAPI/StreetSmart.API/WPF/StreetSmart.WPF.x64.csproj
@@ -108,6 +108,9 @@
     <Compile Include="..\Common\API\Events\ViewerEvent.cs">
       <Link>API\Events\ViewerEvent.cs</Link>
     </Compile>
+    <Compile Include="..\Common\API\Events\ViewerUpdateEvent.cs">
+      <Link>API\Events\ViewerUpdateEvent.cs</Link>
+    </Compile>
     <Compile Include="..\Common\API\ObliqueViewer.cs">
       <Link>API\ObliqueViewer.cs</Link>
     </Compile>
