STREET-2277: Improved start measurement function: - Now the function send a exception if there is an exception on the javascript side - It is now also possible for start oblique measurements

--- a/StreetSmartAPI/StreetSmart.API/WinForms/StreetSmart.WinForms.x86.csproj
+++ b/StreetSmartAPI/StreetSmart.API/WinForms/StreetSmart.WinForms.x86.csproj
@@ -419,6 +419,9 @@
     <Compile Include="..\Common\Exceptions\StreetSmartLoginFailedException.cs">
       <Link>Exceptions\StreetSmartLoginFailedException.cs</Link>
     </Compile>
+    <Compile Include="..\Common\Exceptions\StreetSmartMeasurementException.cs">
+      <Link>Exceptions\StreetSmartMeasurementException.cs</Link>
+    </Compile>
     <Compile Include="..\Common\Exceptions\StreetSmartViewerDoesNotExistException.cs">
       <Link>Exceptions\StreetSmartViewerDoesNotExistException.cs</Link>
     </Compile>
