--- a/StreetSmartAPI/StreetSmart.API/WPF/StreetSmart.WPF.x86.csproj
+++ b/StreetSmartAPI/StreetSmart.API/WPF/StreetSmart.WPF.x86.csproj
@@ -162,6 +162,9 @@
     <Compile Include="..\Common\API\Events\ViewerUpdateEvent.cs">
       <Link>API\Events\ViewerUpdateEvent.cs</Link>
     </Compile>
+    <Compile Include="..\Common\API\ImageViewer.cs">
+      <Link>API\ImageViewer.cs</Link>
+    </Compile>
     <Compile Include="..\Common\API\ObliqueViewer.cs">
       <Link>API\ObliqueViewer.cs</Link>
     </Compile>
@@ -527,6 +530,9 @@
     </Compile>
     <Compile Include="..\Common\Interfaces\API\IAPISettings.cs">
       <Link>Interfaces\API\IAPISettings.cs</Link>
+    </Compile>
+    <Compile Include="..\Common\Interfaces\API\IImageViewer.cs">
+      <Link>Interfaces\API\IImageViewer.cs</Link>
     </Compile>
     <Compile Include="..\Common\Interfaces\API\IObliqueViewer.cs">
       <Link>Interfaces\API\IObliqueViewer.cs</Link>
